--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "jsx": "preserve",
     "lib": ["dom", "es2017", "esnext.asynciterable"]
   }
 }
